Breadcrumbs: Removed generic breadcrumb SCSS and fixed RTL issues.
* Removed generic breadcrumb SCSS and added variable to align with wet-boew/wet-boew#7423.
* RTL fixes:
  * Prevents arrows from getting mispositioned between items.
  * Prevents text from unexpectedly getting cutoff and replaced with ellipses in WebKit browsers.

Closes #125.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,6 +9,9 @@ $banner-gradient-start: #4065b3;
 $banner-gradient-end: #33479e;
 $base-theme-mb-pnl-bg: #ccc;
 
+//Breadcrumb
+$breadcrumb-bg: #fff; // Inner background colour (Bootstrap override).
+
 @mixin navigation-links {
 	a {
 		&:link,
